--- a/diseño/calzado.css
+++ b/diseño/calzado.css
@@ -278,8 +278,13 @@ th, td {
         align-items: center;
     }
 
-    .logo img {
-        width: 80px; /* Reducir el tamaño del logo en pantallas muy pequeñas */
+    nav ul {
+        margin: auto;
+        display: block;
+    }
+    nav ul li{
+        padding: 10px;
+        width: 80px;
     }
 
     
@@ -299,5 +304,10 @@ th, td {
 
     .bienvenida p {
         font-size: 18px; /* Ajuste del párrafo para pantallas muy pequeñas */
+    }
+
+    .cart table thead tr th{
+        
+        padding: 1px;
     }
 }
