--- a/diseño/mujeres.css
+++ b/diseño/mujeres.css
@@ -278,6 +278,15 @@ th, td {
         align-items: center;
     }
 
+    nav ul {
+        margin: auto;
+        display: block;
+    }
+    nav ul li{
+        padding: 10px;
+        width: 80px;
+    }
+
     .logo img {
         width: 80px; /* Reducir el tamaño del logo en pantallas muy pequeñas */
     }
@@ -299,5 +308,10 @@ th, td {
 
     .bienvenida p {
         font-size: 18px; /* Ajuste del párrafo para pantallas muy pequeñas */
+    }
+
+    .cart table thead tr th{
+        
+        padding: 1px;
     }
 }
