--- a/diseño/oferta.css
+++ b/diseño/oferta.css
@@ -143,6 +143,20 @@ footer {
 
 /* Ajustes responsivos */
 @media (max-width: 768px) {
+    nav {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    nav ul {
+        margin: auto;
+        display: block;
+    }
+    nav ul li{
+        padding: 10px;
+        width: 80px;
+    }
+
     .footer-container {
         flex-direction: column;
         align-items: center;
@@ -150,6 +164,11 @@ footer {
 
     .footer-info, .footer-social {
         text-align: center;
+    }
+
+    .cart table thead tr th{
+        
+        padding: 1px;
     }
 }
 
