--- a/diseño/calzado.css
+++ b/diseño/calzado.css
@@ -311,3 +311,23 @@ th, td {
         padding: 1px;
     }
 }
+
+.boton_carro{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    border-radius: 50%;
+    padding: 15px;
+    box-shadow: 0px 4px 8px(0,0,0,0.3);
+    z-index: 1000;
+}
+
+.boton_carro img{
+    width: 30px;
+    height: 30px;
+}
+
+.boton_carro:hover{
+    background-color: black;
+    cursor: pointer;
+}
