--- a/diseño/index.css
+++ b/diseño/index.css
@@ -355,3 +355,96 @@ footer {
         padding: 1px;
     }
 }
+
+
+.boton_carro{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    border-radius: 50%;
+    padding: 15px;
+    box-shadow: 0px 4px 8px(0,0,0,0.3);
+    z-index: 1000;
+}
+
+.boton_carro img{
+    width: 30px;
+    height: 30px;
+}
+
+.boton_carro:hover{
+    background-color: black;
+    cursor: pointer;
+}
+
+
+.todo {
+    display: none;
+    position: fixed;
+    top: 190px;
+    left: 380px;
+    width: 50%;
+    height: 50%;
+    overflow: auto;
+    background-color: #fff;
+    border: 2px solid black;
+    
+}
+
+.todo1{
+    background-color: #fff;
+    margin: auto;
+    padding: 20px;
+    border: 2px solid  black;
+    width: 80%;
+    max-width: 600px;
+}
+
+.cierre{
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.cierre:hover, .cierre:focus{
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.cart {
+    margin-top: 20px;
+  }
+  
+  #checkout {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    margin-top: 10px;
+  }
+  
+  #checkout:hover {
+    background-color: #0056b3;
+  }
+
+
+  @media (max-width: 600px) {
+    .cart table thead tr th{
+        
+        padding: 1px;
+    }
+
+    .todo{
+        top: 190px;
+        left: 40px;
+        padding: 10px 130px 0 60px;
+    }
+    .cart{
+        padding: 0px 130px 0 25px;
+    }
+
+  }
+
