--- a/diseño/oferta.css
+++ b/diseño/oferta.css
@@ -193,3 +193,23 @@ footer {
     padding-bottom: 10px;
     margin-bottom: 10px;
 }
+
+.boton_carro{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    border-radius: 50%;
+    padding: 15px;
+    box-shadow: 0px 4px 8px(0,0,0,0.3);
+    z-index: 1000;
+}
+
+.boton_carro img{
+    width: 30px;
+    height: 30px;
+}
+
+.boton_carro:hover{
+    background-color: black;
+    cursor: pointer;
+}
